[gd_scene load_steps=52 format=3 uid="uid://ccvngfpged05s"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_i62vo"]
[ext_resource type="Texture2D" uid="uid://bvlsbb5o5bgel" path="res://art/characters/spritesheets/3 walk.png" id="2_xlodk"]
[ext_resource type="Texture2D" uid="uid://djoqdedpfq8tr" path="res://art/characters/spritesheets/3 idle.png" id="3_yo3o1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_edp64"]
atlas = ExtResource("2_xlodk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r77su"]
atlas = ExtResource("2_xlodk")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmxg2"]
atlas = ExtResource("2_xlodk")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp4ri"]
atlas = ExtResource("2_xlodk")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_edwmr"]
atlas = ExtResource("2_xlodk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iibg6"]
atlas = ExtResource("2_xlodk")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu5ob"]
atlas = ExtResource("2_xlodk")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi81e"]
atlas = ExtResource("2_xlodk")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_trlgh"]
atlas = ExtResource("2_xlodk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h5bv"]
atlas = ExtResource("2_xlodk")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jy381"]
atlas = ExtResource("2_xlodk")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk6vs"]
atlas = ExtResource("2_xlodk")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipbv5"]
atlas = ExtResource("3_yo3o1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_reve1"]
atlas = ExtResource("3_yo3o1")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3w41"]
atlas = ExtResource("3_yo3o1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oah74"]
atlas = ExtResource("3_yo3o1")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_li2n4"]
atlas = ExtResource("3_yo3o1")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0frx"]
atlas = ExtResource("3_yo3o1")
region = Rect2(32, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_uyjft"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_edp64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r77su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmxg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp4ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edwmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iibg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu5ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi81e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trlgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h5bv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy381")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk6vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipbv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reve1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3w41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oah74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li2n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0frx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o0co5"]
radius = 3.0
height = 8.0

[sub_resource type="Animation" id="Animation_jc0kd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b2nxt"]
resource_name = "idle_down"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_opumq"]
resource_name = "idle_left"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_h8f28"]
resource_name = "idle_right"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_ivcxw"]
resource_name = "idle_up"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_pt2rg"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_tfo0m"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_fq6kg"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_2tl1c"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7vcre"]
_data = {
"RESET": SubResource("Animation_jc0kd"),
"idle_down": SubResource("Animation_b2nxt"),
"idle_left": SubResource("Animation_opumq"),
"idle_right": SubResource("Animation_h8f28"),
"idle_up": SubResource("Animation_ivcxw"),
"walk_down": SubResource("Animation_pt2rg"),
"walk_left": SubResource("Animation_tfo0m"),
"walk_right": SubResource("Animation_fq6kg"),
"walk_up": SubResource("Animation_2tl1c")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_135lj"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5c6k6"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lq4o4"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jx2rr"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0772d"]
animation = &"idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_rq8u3"]
blend_point_0/node = SubResource("AnimationNodeAnimation_135lj")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_5c6k6")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_lq4o4")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_jx2rr")
blend_point_3/pos = Vector2(0, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_0772d")
blend_point_4/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j08qb"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c06mt"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j3u0c"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lftq0"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_kwtda"]
blend_point_0/node = SubResource("AnimationNodeAnimation_j08qb")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_c06mt")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_j3u0c")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_lftq0")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oeiud"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_po2ia"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xgvvt"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_mbamu"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_rq8u3")
states/Idle/position = Vector2(350, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_kwtda")
states/Walk/position = Vector2(516, 100)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_oeiud"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_po2ia"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_xgvvt")]
graph_offset = Vector2(-428, -59)

[sub_resource type="CircleShape2D" id="CircleShape2D_xmasp"]
radius = 100.005

[sub_resource type="CircleShape2D" id="CircleShape2D_aap6a"]
radius = 159.003

[sub_resource type="CircleShape2D" id="CircleShape2D_osg6l"]
radius = 14.0

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("navigation_agent")]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_i62vo")
CHASE_SPEED = 70.0
navigation_agent = NodePath("NavigationAgent2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uyjft")
frame = 1
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_o0co5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7vcre")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_mbamu")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Idle/blend_position = Vector2(-0.633771, 0.0772128)
parameters/Walk/blend_position = Vector2(-0.173987, -0.0621469)

[node name="Aggression Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggression Range"]
shape = SubResource("CircleShape2D_xmasp")
debug_color = Color(0.705882, 0, 0.0627451, 0.419608)

[node name="De-Aggro Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="De-Aggro Range"]
shape = SubResource("CircleShape2D_aap6a")
debug_color = Color(0, 0.407843, 0.478431, 0.419608)

[node name="Battle Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Battle Range"]
shape = SubResource("CircleShape2D_osg6l")
debug_color = Color(0, 0.407843, 0.478431, 0.419608)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="RecalculateTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="Aggression Range" to="." method="_on_aggression_range_body_entered"]
[connection signal="body_exited" from="De-Aggro Range" to="." method="_on_de_aggro_range_body_exited"]
[connection signal="body_entered" from="Battle Range" to="." method="_on_battle_range_body_entered"]
[connection signal="timeout" from="RecalculateTimer" to="." method="_on_recalculate_timer_timeout"]
